--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
     <link rel="canonical" href="https://wind-waker-js.vercel.app/" />
 
     <!-- socials meta tags -->
-    <meta property="og:title" content="Wind Waker JS - Robin Payot" />
+    <meta property="og:title" content="Wind Waker JS Pc Port - jaime Gonzalez" />
     <meta
       property="og:description"
-      content="Hi! I'm Robin Payot a creative developer making immersive websites since 2015 and a fan of WebGL. Zelda: The Wind Waker is one of my favorite game and I tried to make the ocean part in JavaScript/WebGL, explore and play!"
+      content="¡Hola! Jaime Gonzalez desarrollador creativo que crea sitios web inmersivos desde 2025 y fan de  Zelda , The Wind Waker es uno de mis juegos favoritos e intenté recrear la parte del océano en JavaScript/WebGL. ¡Explora y juega!"
     />
     <meta property="og:image" content="https://wind-waker-js.vercel.app/img/social.png" />
     <meta property="og:url" content="https://wind-waker-js.vercel.app/" />
@@ -29,7 +29,7 @@
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://wind-waker-js.vercel.app/img/social.png" />
-    <meta name="twitter:image:alt" content="Wind Waker JS - Robin Payot" />
+    <meta name="twitter:image:alt" content="Wind Waker JS Pc Port - jaime Gonzalez" />
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
@@ -199,50 +199,44 @@
         <div data-about class="about">
           <p class="about__text text-2">
             Hi! I'm
-            <a href="https://robinpayot.com/" target="_blank">Robin Payot</a>, a creative developer making immersive
-            websites since 2015 and a fan of WebGL.
+            <a href="https://robinpayot.com/" target="_blank">Jaime Gonzalez</a>desarrollador creativo que crea sitios web inmersivos desde 2025 y fan de
             <a href="https://en.wikipedia.org/wiki/The_Legend_of_Zelda:_The_Wind_Waker" target="_blank"
               >Zelda: The Wind Waker</a
             >
-            is one of my favorite game and I tried to remake the ocean part of it using
-            <a href="https://github.com/mrdoob/three.js/" target="blank">Three.js</a> I hope you'll like the result!
+           es uno de mis juegos favoritos e intenté recrear la parte del océano en JavaScript/WebGL. 
+            <a href="https://github.com/mrdoob/three.js/" target="blank">Three.js</a> espero que te guste el resultado , Explora y juega!
           </p>
-          <p class="about__title h3">Credits:</p>
+          <p class="about__title h3">Creditos:</p>
           <div class="separator">
             <img src="/icons/selector2-alpha.png" alt="" />
             <span class="separator__line"></span>
             <img src="/icons/selector2-alpha.png" alt="" />
           </div>
-          <p class="about__text about__text-list text-2">Nintendo for these wonderful assets</p>
+          <p class="about__text about__text-list text-2">Nintendo por estos maravillosos recursos</p>
           <p class="about__text about__text-list text-2">
-            The amazing Nathan Gordon posted
-            <a href="https://medium.com/@gordonnl/wind-waker-graphics-analysis-a0b575a31127" target="_blank"
-              >articles</a
-            >
-            some times ago about making aspects of the game in JavaScript, his articles helped me a lot to make the
-            waves and the wind!
+         Hace algún tiempo, algunos artículos sobre cómo crear aspectos del juego en JavaScript me ayudaron mucho a hacer las olas y el viento.
           </p>
           <p class="about__text about__text-list text-2">
-            3D models of the game found
-            <a href="https://github.com/LagoLunatic/ww_model_helpers" target="_blank">there</a>
+            Se encontraron modelos 3D del juego
+            <a href="https://github.com/LagoLunatic/ww_model_helpers" target="_blank">aquí</a>
           </p>
           <p class="about__text about__text-list text-2">
-            Textures of the game found
+            Texturas del juego encontradas
             <a
               href="https://forums.dolphin-emu.org/Thread-hypatia-s-tloz-the-wind-waker-hd-pack-v2-0001a"
               target="_blank"
-              >there</a
+              >aquí</a
             >
           </p>
           <p class="about__text about__text-list text-2">
-            Musics and sounds of the game found
+            Musica y sonidos del juego encontrados
             <a
               href="https://downloads.khinsider.com/game-soundtracks/album/legend-of-zelda-takt-of-wind-original-sound-tracks"
               target="_blank"
-              >there</a
+              >aquí</a
             >
-            and
-            <a href="https://noproblo.dayjo.org/ZeldaSounds/WW_New/index.html" target="_blank">there</a>
+            Y
+            <a href="https://noproblo.dayjo.org/ZeldaSounds/WW_New/index.html" target="_blank">aquí</a>
           </p>
           <div class="separator">
             <img src="/icons/selector2-alpha.png" alt="" />
@@ -253,10 +247,9 @@
         </div>
         <div data-treasure class="treasure">
           <p class="treasure__text text-2">
-            Congratulations! You've found the last Triforce Shards! You've won the Master sword
-            <img class="shield" src="/icons/master_sword.png" alt="" /> and Mirror Shield
-            <img class="shield" src="/icons/mirror_shield.png" alt="" />. You're boat now go 2x faster! Continue to
-            explore or try the Ruppee's game mode!
+            ¡Enhorabuena! ¡Has encontrado los últimos fragmentos de la Trifuerza! ¡Has ganado la Espada Maestra!
+            <img class="shield" src="/icons/master_sword.png" alt="" /> y el escudo espejo
+            <img class="shield" src="/icons/mirror_shield.png" alt="" />¡Tu barco ahora va el doble de rápido! Continúa explorando o prueba el modo de juego de Ruppee.
           </p>
           <div class="separator">
             <img src="/icons/selector2-alpha.png" alt="" />
@@ -270,9 +263,9 @@
         <!-- Game -->
         <div data-game class="game">
           <div class="game__overlay">
-            <h2 class="game__overlay__title h2-reggae">Catch a maximum of rupees!</h2>
+            <h2 class="game__overlay__title h2-reggae">¿consigue el maximo de rupias!</h2>
             <p class="game__overlay__text text-1 touch-hidden">
-              Use left and right arrows to navigate
+              usa las flechas derecha e izquierda para navegar
               <svg
                 class="keyboard-arrows"
                 id="Layer_1"
@@ -306,7 +299,7 @@
                 />
                 <polygon points="63.9 40.7 71.2 37.1 63.9 33.4 63.9 40.7" />
               </svg>
-              and press the spacebar
+              y presiona espacio
               <svg
                 class="keyboard-space"
                 id="Layer_1"
@@ -318,10 +311,10 @@
                   d="m2.94,0l-.04,11.82s.13,2.9,2.9,2.9h27.6l13.6-.05s2.4-.09,2.4-3.25V0h2.8v11.72s.22,5.07-5.13,5.76l-41.27.04s-5.8-.17-5.8-5.8S.1,0,.1,0h2.84Z"
                 />
               </svg>
-              to avoid obstacles!
+              para evitar obstáculos!
             </p>
             <p class="game__overlay__text text-1 touch-only">
-              Use the left and right buttons to navigate, press the center button to jump over obstacles!
+              ¡Utiliza los botones izquierdo y derecho para navegar, pulsa el botón central para saltar los obstáculos!
             </p>
             <button aria-label="Ok" data-game-start class="h3-reggae button">Ok</button>
           </div>
@@ -329,9 +322,9 @@
             <div class="game__end__content">
               <img data-game-end-img src="#" class="game__end__img" />
               <div class="game__end__screenshot">
-                <p class="game__end__title h2-reggae">Congrats!</p>
-                <p class="game__end__text h3">Your score: <span data-game-end-score></span></p>
-                <p class="game__end__text h3">Best score: <span data-game-end-best>0</span></p>
+                <p class="game__end__title h2-reggae">¡Felicitaciones!</p>
+                <p class="game__end__text h3">Tu puntuación: <span data-game-end-score></span></p>
+                <p class="game__end__text h3">Mejor puntuación: <span data-game-end-best>0</span></p>
               </div>
               <div class="separator">
                 <img src="/icons/selector2-alpha.png" alt="" />
@@ -343,10 +336,10 @@
                 href="#"
                 download="best-score-wind-waker-js.png"
                 class="game__end__dl h4-reggae button"
-                >Download my score
+                >Descargar mi puntuacion
               </a>
               <button aria-label="Share on X" data-game-end-share-x class="game__end__share h4-reggae button">
-                <span>Share on</span>
+                <span>Compartir en</span>
                 <svg class="game__end__icon" id="svg5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000.78 936.69">
                   <g id="layer1">
                     <path
@@ -357,7 +350,7 @@
                 </svg>
               </button>
               <button aria-label="Share on Facebook" data-game-end-share-fb class="game__end__share h4-reggae button">
-                <span>Share on</span>
+                <span>Compartir en</span>
                 <svg
                   class="game__end__icon"
                   version="1.1"
@@ -434,9 +427,9 @@
         <!-- Explore -->
         <div data-explore class="explore">
           <div class="explore__overlay explore__overlay--tuto-1">
-            <h2 class="explore__overlay__title h2-reggae">Explore the ocean</h2>
+            <h2 class="explore__overlay__title h2-reggae">explora el oceano</h2>
             <p class="explore__overlay__text text-1 touch-hidden">
-              Use the arrow keys to navigate
+              usa las flechas para navegar
               <svg
                 class="keyboard-arrows"
                 id="Layer_1"
@@ -461,7 +454,7 @@
                 />
                 <polygon points="63.9 40.7 71.2 37.1 63.9 33.4 63.9 40.7" />
               </svg>
-              and press the spacebar
+              y presiona espacio
               <svg
                 class="keyboard-space"
                 id="Layer_1"
@@ -473,7 +466,7 @@
                   d="m2.94,0l-.04,11.82s.13,2.9,2.9,2.9h27.6l13.6-.05s2.4-.09,2.4-3.25V0h2.8v11.72s.22,5.07-5.13,5.76l-41.27.04s-5.8-.17-5.8-5.8S.1,0,.1,0h2.84Z"
                 />
               </svg>
-              to avoid obstacles!
+              para evitar obstáculos!
             </p>
             <p class="explore__overlay__text text-1 touch-hidden">
               <svg
@@ -486,22 +479,22 @@
                 <path
                   d="m13.01,8.02L.82.09C.66-.02.45-.03.28.06c-.17.09-.28.27-.28.47v14.65c0,.2.11.39.3.48.18.09.4.07.56-.06l3.41-2.62,3.52,6.47c.1.18.28.28.47.28.09,0,.17-.02.25-.07l3.74-2.03c.26-.14.35-.46.21-.72l-3.52-6.48,3.96-1.47c.19-.07.32-.24.34-.44.02-.2-.07-.39-.24-.5Zm-5.02,1.63c-.15.05-.26.17-.31.31-.05.15-.04.31.03.44l3.56,6.55-2.81,1.52-3.56-6.55c-.07-.14-.2-.23-.36-.27-.04,0-.07-.01-.11-.01-.12,0-.23.04-.32.11l-3.04,2.34V1.52l10.48,6.82-3.55,1.32Z"
                 /></svg
-              >Click and drag anywhere to move the camera and scroll to zoom
+              >Haz clic y arrastra en cualquier lugar para mover la cámara y usa la rueda del ratón para hacer zoom.
             </p>
             <p class="game__overlay__text text-1 touch-only">
-              Use the joystick to navigate, press the left button to jump over obstacles!
+              ¡Utiliza el joystick para navegar, pulsa el botón izquierdo para saltar los obstáculos!
             </p>
             <p class="game__overlay__text text-1 touch-only">
-              Touch and move anywhere else to rotate the camera and pinch to zoom
+              Toca y desliza en cualquier otro lugar para girar la cámara y pellizca para hacer zoom
             </p>
             <button aria-label="OK" data-explore-start="first" class="h3-reggae button">Ok</button>
           </div>
           <div class="explore__overlay explore__overlay--tuto-2">
-            <h2 class="explore__overlay__title h2-reggae">Find the Triforce</h2>
+            <h2 class="explore__overlay__title h2-reggae">Encuentra la trifuerza</h2>
             <img src="/img/light-ring.jpg" class="explore__overlay__image" />
             <p class="explore__overlay__text text-1 touch-hidden">
-              If you see a glowing light like this, use the Hook <img class="icon-hook" src="/icons/hook.png" /> and
-              press the spacebar
+              Si ves una luz brillante como esta, usa el gancho. <img class="icon-hook" src="/icons/hook.png" /> 
+              y presiona espacio
               <svg
                 class="keyboard-space"
                 id="Layer_1"
@@ -513,11 +506,11 @@
                   d="m2.94,0l-.04,11.82s.13,2.9,2.9,2.9h27.6l13.6-.05s2.4-.09,2.4-3.25V0h2.8v11.72s.22,5.07-5.13,5.76l-41.27.04s-5.8-.17-5.8-5.8S.1,0,.1,0h2.84Z"
                 />
               </svg>
-              to find a treasure.
+              para encontrar un tesoro.
             </p>
             <p class="explore__overlay__text text-1 touch-only">
-              If you see a glowing light like this, use the Hook <img class="icon-hook" src="/icons/hook.png" /> and
-              press "Put Away" to find a treasure.
+              If you see a glowing light like this, use the Hook <img class="icon-hook" src="/icons/hook.png" /> y
+              pulsa "Guardar" para encontrar un tesoro.
             </p>
             <p class="explore__overlay__text text-1">
               Maybe you'll find a Triforce shard! <img class="icon-shard" src="/icons/shard.png" />
@@ -623,12 +616,12 @@
         </div>
         <div class="put-away-button">
           <button aria-label="put-away-button" data-put-away-button class="put-away-button__content">
-            <span class="put-away-button__text">Put Away</span>
+            <span class="put-away-button__text">Guardar</span>
           </button>
         </div>
         <div class="jump-button">
           <button aria-label="jump" data-jump-button class="jump-button__content">
-            <span class="jump-button__text">Jump</span>
+            <span class="jump-button__text">Salta</span>
           </button>
         </div>
         <!-- Screenshot overlay -->
@@ -636,7 +629,7 @@
           <img href="#" data-screenshot-img class="screenshot__img" />
           <div class="screenshot__content">
             <div class="screenshot__text text-3">
-              Feel free to download the image and share it in your fav' social media!
+              ¡Descarga la imagen y compártela en tus redes sociales favoritas!
             </div>
             <div class="separator">
               <img src="/icons/selector2-alpha.png" alt="" />
@@ -644,10 +637,10 @@
               <img src="/icons/selector2-alpha.png" alt="" />
             </div>
             <a data-screenshot-download href="#" download="wind-waker-js.png" class="screenshot__dl h4-reggae button"
-              >Download
+              >Descargar
             </a>
             <button aria-label="Share on X" data-screenshot-share-x class="screenshot__share h4-reggae button">
-              <span>Share on</span>
+              <span>Compartir en</span>
               <svg class="screenshot__icon" id="svg5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000.78 936.69">
                 <g id="layer1">
                   <path
